syntax = "proto3";

package resources.messenger;

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/messenger;messenger";

message UserStatus {
  int32 user_id = 1 [(validate.rules).int32.gte = 0];
  resources.timestamp.Timestamp last_seen = 2;
  // @sanitize: method=StripTags
  optional string status = 3 [(validate.rules).string.max_len = 40];
}
